2012-02-01   D. V. Wiebe <getdata@ketiltrout.net> svn:652
	* configure.ac: Figure out the directory separator (ie. '/' on POSIX).
	
	* src/open.c (_GD_CreateDirfile): Handle DIRSEP.
	* src/internal.h (_GD_Root): Added.
	* src/common.c (_GD_CanonicalPath): Handle WIN32/DOS paths.

	* src/open.c (gd_cbopen): Temporarily store the full path in D->name so that
	_GD_CreateDirfile can use it when needed.

	* src/spf.c (_GD_GetSPF): De const-ify E.

	* src/common.c (_GD_FindField): Fix buffer length calculation.

	* test/file.c test/fragment_name.c bindings/cxx/test/big_test.cpp
	bindings/f77/test/big_test.f bindings/f77/test/big_test95.f90: Handle DIRSEP.
	* bindings/f77/test/test_getdata.f.in: Added.

2012-01-18   D. V. Wiebe <getdata@ketiltrout.net> svn:650
	* src/getdata.h.in src/internal.h: Define GD_ENC_ZZSLIM GD_ZZSLIM_ENCODED.
	* src/zzslim.c: Added.
	* src/encoding.c: In the initialisation of _gd_ef, differentiate things
	that are willing to use the Generic functions from those that aren't.  Added
	zzslim.

	* src/common.c (_GD_CanonicalPath): Don't truncate on ENOENT.

	* src/slim.c (_GD_SlimOpen): The slimdopen in slimlib-2.6.5 doesn't interact
	well with slim's own zzip support, so let's ignore it for now.

	* bindings/make_parameters.c: Convert F77 encoding parameters to the form
	GDE_xx.

	* configure.ac: zzslim tests.  Always look for a C++ compiler.
	* m4/encoding.m4: Separate LIBS from LDFLAGS; fix some underquoting.

2012-01-11   D. V. Wiebe <getdata@ketiltrout.net> svn:644
	* src/getdata.h.in: Added GD_MPLEX_ENTRY.  Updated gd_entry_t.  Defined
	GD_COUNT_MAX.

	* src/legacy.c (CopyMplexEntry) src/getdata.c (_GD_MplexData _GD_DoMplex)
	src/putdata.c (_GD_MplexOutData _GD_DoMplexOut) src/parse.c (_GD_ParseMplex)
	src/add.c (gd_add_mplex gd_madd_mplex) src/mod.c (gd_alter_mplex): Added.
	* src/internal.h: Define GD_MPLEX_LOOKBACK

	* src/entry.c (_GD_FreeE _GD_CalculateEntry gd_entry gd_validate)